--- a/src/helper/Lang_fr.properties
+++ b/src/helper/Lang_fr.properties
@@ -1,3 +1,9 @@
 #A resource bundle for the french language.
 Username=Identifiant
 Password=Mot de passe
+Login=Connexion
+Exit=Quitter
+Application\ Manager=Gestionnaire\ d'Applications
+Application\ Manager\ Login=Connexion\ au\ Gestionnaire\ d'Applications
+Locale=Localité
+The\ username\ and/or\ password\ do\ not\ match.=Le\ nom\ d'utilisateur\ et/ou\ le\ mot\ de\ passe\ ne\ correspondent\ pas.
