--- a/src/helper/Lang_fr.properties
+++ b/src/helper/Lang_fr.properties
@@ -3,7 +3,7 @@ Username=Identifiant
 Password=Mot de passe
 Login=Connexion
 Exit=Quitter
-Application\ Manager=Gestionnaire\ d'Applications
-Application\ Manager\ Login=Connexion\ au\ Gestionnaire\ d'Applications
+Appointment\ Manager=Gestionnaire\ de\ Rendez-vous
+Appointment\ Manager\ Login=Connexion\ au\ Gestionnaire\ de\ Rendez-vous
 Locale=Localité
 The\ username\ and/or\ password\ do\ not\ match.=Le\ nom\ d'utilisateur\ et/ou\ le\ mot\ de\ passe\ ne\ correspondent\ pas.
