Fix Login UI to use location instead of locale

--- a/src/helper/Lang_fr.properties
+++ b/src/helper/Lang_fr.properties
@@ -5,5 +5,5 @@ Login=Connexion
 Exit=Quitter
 Appointment\ Manager=Gestionnaire\ de\ Rendez-vous
 Appointment\ Manager\ Login=Connexion\ au\ Gestionnaire\ de\ Rendez-vous
-Locale=Localité
+Location=Localisation
 The\ username\ and/or\ password\ do\ not\ match.=Le\ nom\ d'utilisateur\ et/ou\ le\ mot\ de\ passe\ ne\ correspondent\ pas.
