Change login error message in controller to make more sense

--- a/src/helper/Lang_fr.properties
+++ b/src/helper/Lang_fr.properties
@@ -6,4 +6,4 @@ Exit=Quitter
 Appointment\ Manager=Gestionnaire\ de\ Rendez-vous
 Appointment\ Manager\ Login=Connexion\ au\ Gestionnaire\ de\ Rendez-vous
 Location=Localisation
-The\ username\ and/or\ password\ do\ not\ match.=Le\ nom\ d'utilisateur\ et/ou\ le\ mot\ de\ passe\ ne\ correspondent\ pas.
+The\ username\ and/or\ password\ is\ incorrect.=Le\ nom\ d'utilisateur\ et/ou\ le\ mot\ de\ passe\ est\ incorrect.
