Add ability to generate report for total customers form

--- a/src/helper/Lang_fr.properties
+++ b/src/helper/Lang_fr.properties
@@ -7,3 +7,9 @@ Appointment\ Manager=Gestionnaire\ de\ Rendez-vous
 Appointment\ Manager\ Login=Connexion\ au\ Gestionnaire\ de\ Rendez-vous
 Location=Localisation
 The\ username\ and/or\ password\ is\ incorrect.=Le\ nom\ d'utilisateur\ et/ou\ le\ mot\ de\ passe\ est\ incorrect.
+Upcoming\ Appointment=Prochain\ rendez-vous
+You\ have\ an\ upcoming\ appointment.\ Here\ are\ the\ details=Vous\ avez\ un\ prochain\ rendez-vous.\ Voici\ les\ détails
+You\ have\ no\ upcoming\ appointments.=Vous\ n'avez\ pas\ de\ prochains\ rendez-vous.
+Appointment\ ID=ID\ du\ rendez-vous
+on=le
+at=à
